--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name=".MyApplication.MyApplication"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme.NoTitleBar"
+        >
 
 
         <!-- android  百度地图api -->
