人脸识别部分更新

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
         </activity>
 
         <activity android:name=".Activities.ShowPhotoBySite"></activity>
-        <activity android:name=".Activities.ShowPhotoByPerson"></activity>
+        <activity android:name=".Activities.ShowPhotoByPerson"
+     ></activity>
 
     </application>
 
