--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,13 +50,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.5.2'
     //recycleview 库
     compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
-    //百度api
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile files('libs/baidumapapi_base_v4_1_1.jar')
-    compile files('libs/baidumapapi_cloud_v4_1_1.jar')
-    compile files('libs/baidumapapi_map_v4_1_1.jar')
-    compile files('libs/baidumapapi_radar_v4_1_1.jar')
-    compile files('libs/baidumapapi_search_v4_1_1.jar')
-    compile files('libs/baidumapapi_util_v4_1_1.jar')
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile files('libs/AMap2DMap_2.9.3_AMapLocation_3.2.0_20161205.jar')
+    compile files('libs/Android_Map3D_SDK_V4.1.2_20161104.jar')
+    compile files('libs/AMap3DMap_4.1.2_AMapLocation_3.2.0_20161205.jar')
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
