--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
+
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
+
     signingConfigs {
         config {
             keyAlias 'smartalbum'
@@ -53,6 +59,10 @@ dependencies {
     compile files('libs/AMap2DMap_2.9.3_AMapLocation_3.2.0_20161205.jar')
     compile files('libs/Android_Map3D_SDK_V4.1.2_20161104.jar')
     compile files('libs/AMap3DMap_4.1.2_AMapLocation_3.2.0_20161205.jar')
-    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
-    compile 'com.google.code.gson:gson:2.2.4'
+
+    //单元测试
+    testCompile 'junit:junit:4.12'
+    //mockito测试
+    testCompile 'org.mockito:mockito-core:1.10.19'
+
 }
