--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,14 +55,14 @@ dependencies {
     //用于图片加载的glide库
     compile 'com.github.bumptech.glide:glide:3.5.2'
     //recycleview 库
+    //noinspection GradleCompatible
     compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
     compile files('libs/AMap2DMap_2.9.3_AMapLocation_3.2.0_20161205.jar')
     compile files('libs/Android_Map3D_SDK_V4.1.2_20161104.jar')
     compile files('libs/AMap3DMap_4.1.2_AMapLocation_3.2.0_20161205.jar')
-
     //单元测试
     testCompile 'junit:junit:4.12'
     //mockito测试
     testCompile 'org.mockito:mockito-core:1.10.19'
-
+    compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
 }
